All notable changes to this project will be documented in this file.

The format is loosely based on [Keep a Changelog](http://keepachangelog.com/en/1.0.0/)
and this project adheres to [Semantic Versioning](http://semver.org/spec/v2.0.0.html).

## [0.14.1]
- Fix to have streaming job with control commands unwrap to be executed via immediate to have clean defered execution of immediate commands.
- Simplify jogger keycode to gcode case logic. Chunk keycode stripping is no longer needed.

## [0.14.0]
- Add real-time continuous Jog via keyboard input feed (arrow keys, ; and /).
- Add a queue wait to ensure complete streaming job execution before picking up the next job

## [0.13.2]
- Fix hc disconnect and abort procedure for immediate, device, and streamer (graceful termination).
- Update to disallow all $ commands on feed hold to avoid stalling immediate processing.
- Add error messages on error code exceptions.

## [0.13.1]
- Add hc jobs listing support
- Update home to be immediate rather than job streaming.
- Cleanup naming inconsistencies.

## [0.13.0]
- Add hc, a sample HCLI to enable streaming of G-Code to a CNC through a GRBL 1.1 compliant device.
- Fix parameter quoted string split argument problem

## [0.12.3]
- Fix edge case when system doesn't exist in the context.json.

## [0.12.2]
- Update README huckle usage documentation.

## [0.12.1]
- Update README huckle usage documentation.

## [0.12.0]
- Update hg GPT-3.5 sample application to allow for persistent behavior setting in a conversation (system).

## [0.11.9]
- Update README to refine installation and usage information.

## [0.11.8]
- Update to README for added support context and to lay out future improvement ideas.

## [0.11.7]
- Update to even up carriage returns in blank chat output and context output
- Update setup.py to make media-type for rst file explicity to text/x-rst to pass twine check

## [0.11.6]
- Update to add dry run to publishing to inspect the pypi package properly before publishing